Fix bizarre 3px misalignment in captcha and selector.

--- a/src/statics/src/captcha/captcha.less
+++ b/src/statics/src/captcha/captcha.less
@@ -5,6 +5,7 @@
 
     img {
       max-width: 100%;
+      margin-bottom: -3px;
     }
 
     .selector { 
